[gd_scene load_steps=15 format=2]

[ext_resource path="res://Lowrez Dungeoncrawl Assets/Startscreen/StartMenuBackground.png" type="Texture" id=1]
[ext_resource path="res://GameScripts/StartMenu.gd" type="Script" id=2]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Startscreen/exit_focused.png" type="Texture" id=3]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Startscreen/start.png" type="Texture" id=4]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Startscreen/start_focused.png" type="Texture" id=5]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Startscreen/exit_pressed.png" type="Texture" id=6]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Startscreen/exit_button.png" type="Texture" id=7]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Startscreen/start_pressed.png" type="Texture" id=8]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Startscreen/yes_a.png" type="Texture" id=9]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Startscreen/no_button.png" type="Texture" id=10]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Startscreen/no_disabled.png" type="Texture" id=11]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Startscreen/no_pressed.png" type="Texture" id=12]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Startscreen/yes_disabled.png" type="Texture" id=13]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Startscreen/yes_button.png" type="Texture" id=14]

[node name="StartMenu" type="Node2D"]
position = Vector2( 23, 16 )
script = ExtResource( 2 )
tutorial_room = "res://Rooms/Tutorial/Room0.tscn"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -19, -13 )
hframes = 2

[node name="Start" type="TextureButton" parent="."]
margin_left = -18.0
margin_top = 10.0
margin_right = 2.0
margin_bottom = 15.0
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="."]
margin_left = 3.0
margin_top = 10.0
margin_right = 16.0
margin_bottom = 15.0
focus_mode = 0
disabled = true
toggle_mode = true
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="TextureButton" parent="."]
visible = false
margin_left = -12.0
margin_top = 10.0
margin_right = 8.0
margin_bottom = 15.0
disabled = true
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 14 )
texture_disabled = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="TextureButton" parent="."]
visible = false
margin_left = -2.0
margin_top = 10.0
margin_right = 18.0
margin_bottom = 15.0
disabled = true
toggle_mode = true
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 12 )
texture_disabled = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="No" to="." method="_on_No_pressed"]
